rename variables in the template

--- a/letter.tex
+++ b/letter.tex
@@ -35,29 +35,29 @@
 \setkomafont{backaddress}{\mdseries}
 
 \LoadLetterOption{DIN}
-\setkomavar{fromname}{__FROMNAME__}
-\setkomavar{fromaddress}{__FROMADDRESS__}
-\setkomavar{fromphone}{__FROMPHONE__}
-\setkomavar{fromemail}{__FROMEMAIL__}
+\setkomavar{fromname}{FROMNAME}
+\setkomavar{fromaddress}{FROMADDRESS}
+\setkomavar{fromphone}{FROMPHONE}
+\setkomavar{fromemail}{FROMEMAIL}
 \setkomavar{backaddressseparator}{\enspace\textperiodcentered\enspace}
-\setkomavar{signature}{__SIGNATURE__}
-\setkomavar{place}{__PLACE__}
-\setkomavar{date}{__DATE__}
+\setkomavar{signature}{SIGNATURE}
+\setkomavar{place}{PLACE}
+\setkomavar{date}{DATE}
 \setkomavar{enclseparator}{: }
-\setkomavar{firstfoot}{__FIRSTFOOT__}
-\setkomavar{yourref}{__YOURREF__}
-\setkomavar{yourmail}{__YOURMAIL__}
-\setkomavar{customer}{__MEMBERIDENT__}
+\setkomavar{firstfoot}{FIRSTFOOT}
+\setkomavar{yourref}{YOURREF}
+\setkomavar{yourmail}{YOURMAIL}
+\setkomavar{customer}{MEMBERIDENT}
 
 \begin{document}
-\begin{letter}{__RECEIVER__}
-\setkomavar{subject}{__SUBJECT__}
-\opening{__OPENING__}
+\begin{letter}{RECEIVER}
+\setkomavar{subject}{SUBJECT}
+\opening{OPENING}
 
 \blindtext
 
 \Blindtext
 
-\closing{__CLOSING__}
+\closing{CLOSING}
 \end{letter}
 \end{document}
